--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,12 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity android:name=".view.PictureActivity"
+                  android:theme="@style/AppTheme.NoActionBar"/>
+        <activity android:name=".view.H5Activity"
+                  android:theme="@style/AppTheme.NoActionBar"/>
+        <activity android:name=".view.DetailInfoActivity"
+                  android:theme="@style/AppTheme.NoActionBar"/>
     </application>
 
 </manifest>
